# Screen-Recorder-X

./: CMakeLists.txt  README.md  get_screen.cpp  get_screen.h  main.cpp
